[package]
name = "broadside"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
description = "One-way ActivityPub server for organizations"

[dependencies]
ammonia = "4"
anyhow = "1"
axum = { version = "0.8", features = ["tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
blurhash = "0.2"
feed-rs = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
notify = "7"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
